--- a/public/sass/styles.sass
+++ b/public/sass/styles.sass
@@ -1363,6 +1363,7 @@
                     font-size: 14px
                 &_clubDate
                     gap: 12px
+                    width: 65%
                     // &_club
                     //     span
                     //         font-size: 14px
